--- a/test3.ipynb
+++ b/test3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bb9dddd64d9a5ac46de7f7d5ba2abecb7dd4bb75c76a6845ace376759bd57f78"
+  "signature": "sha256:3bd90654fc1740b5841e6ea707fc65aa8f2bec866801d8af74e0ae15edf74edc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -189,9 +189,10 @@
       "        run = True,\n",
       "        nfiles = 16):\n",
       "    if run:\n",
-      "        subprocess.call(['rm',\n",
-      "                         'Rdata_z{0:0>7x}'.format(0),\n",
-      "                         'Rdata_z{0:0>7x}'.format(Rdata_py.shape[0]//2)])\n",
+      "        for nf in range(nfiles):\n",
+      "            subprocess.call(\n",
+      "                ['rm',\n",
+      "                 'Rdata_z{0:0>7x}'.format(nf*Rdata_py.shape[0]//nfiles)])\n",
       "        compute_cpp_data(branch, nfiles = nfiles)\n",
       "    Rdata = []\n",
       "    for nf in range(nfiles):\n",
@@ -203,12 +204,12 @@
       "#Rdata = get_cpp_data(branch = 'develop')\n",
       "# develop says 30 secs, inplace fft is 28 secs\n",
       "#Rdata = get_cpp_data(branch = 'feature-inplace_fft')\n",
-      "Rdata = get_cpp_data(run = True, nfiles = 8)"
+      "Rdata = get_cpp_data(run = True, nfiles = 16)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -249,7 +250,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
