use only MPI_REAL4 for input

--- a/test3.ipynb
+++ b/test3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1fb1edb246fe944c9cc82fff52eb72dfc49a0cff2302b7d48c4eb3787034801e"
+  "signature": "sha256:36cd47ff064b589a2110031c054c1d9eaa0011c1b0627ee83866e04516e42c63"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -209,11 +209,11 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 19
     },
     {
      "cell_type": "code",
-     "collapsed": false,
+     "collapsed": true,
      "input": [
       "distance = np.max(np.abs(Rdata_py - Rdata), axis = (1, 2, 3, 4))\n",
       "if np.max(distance) > 1e-5:\n",
@@ -250,7 +250,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
