use unsigned char for MPI IO

--- a/test3.ipynb
+++ b/test3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:41b656323632ba5dd67fcd6f67d6e62ab479be1edf0adc21548c493eb5da9b1d"
+  "signature": "sha256:966c6344a3d90cdf5a7423c96eebbfd82f41bd0e6556fcce769383cb4e93116c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -63,8 +63,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 20
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "-c:15: RuntimeWarning: divide by zero encountered in true_divide\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -147,7 +155,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 56
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -200,7 +208,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 52
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -241,11 +249,11 @@
        "text": [
         "0.0\n",
         "distance is small\n",
-        "14.9705\n"
+        "14.4104\n"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
