--- a/test3.ipynb
+++ b/test3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:966c6344a3d90cdf5a7423c96eebbfd82f41bd0e6556fcce769383cb4e93116c"
+  "signature": "sha256:48849ce7df2009ce7253f1b242366c1e998f76ecec705fb62d3af98ecbe8bbc0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -57,22 +57,14 @@
       "Kdata0 = generate_data_3D(n, p = 2).astype(np.complex64)\n",
       "Kdata1 = generate_data_3D(n, p = 2).astype(np.complex64)\n",
       "Kdata2 = generate_data_3D(n, p = 2).astype(np.complex64)\n",
-      "Kdata0.T.copy().astype('<c8').tofile(\"Kdata0\")\n",
-      "Kdata1.T.copy().astype('<c8').tofile(\"Kdata1\")\n",
-      "Kdata2.T.copy().astype('<c8').tofile(\"Kdata2\")"
+      "Kdata0.T.copy().astype('>c8').tofile(\"Kdata0\")\n",
+      "Kdata1.T.copy().astype('>c8').tofile(\"Kdata1\")\n",
+      "Kdata2.T.copy().astype('>c8').tofile(\"Kdata2\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "-c:15: RuntimeWarning: divide by zero encountered in true_divide\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -155,7 +147,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -208,7 +200,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -249,11 +241,11 @@
        "text": [
         "0.0\n",
         "distance is small\n",
-        "14.4104\n"
+        "15.2714\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
